  spans multiple lines. Three ``]`` characters indicate the end of such a block.
- ``!`` immediately before a phrase set up to be replaced (see gen_changelog.py) stops that occurrence from being replaced.

Template for new versions:

## New Features

## Fixes

## Misc Improvements

## Removed

===end
]]]

# Future

## New Features

## Fixes

## Misc Improvements

## Removed

# 51.02-r1

## Misc Improvements
- `stonesense`: ``keybinds.txt`` config file is now read from ``dfhack-config/stonesense/keybinds.txt``
- `stonesense`: added some missing artwork for bookcases, displays, and offering places
- `stonesense`: reorganized the position of some existing art to be more intuitive
- `stonesense`: added index numbers empty sprite slots to aid in making the xml files for the sprites
- `stonesense`: zoom levels in stonesense now mirror the main game when in follow mode

# 50.15-r2

## New Features
- `stonesense`: added hotkey to toggle fog ``;`` (default keybinding)
- `stonesense`: added hotkey to toggle announcements: ``a`` (default keybinding)
- `stonesense`: added hotkey to toggle debug mode: ``~`` (default keybinding)
- `stonesense`: added init file config to show announcements (on by default)
- `stonesense`: added init file config for whether Esc is recognized for closing the stonesense window (on by default to match previous behavior)
- `stonesense`: added init file config for whether creature moods and jobs are displayed (off by default)

## Fixes
- `stonesense`: fixed crash when maximizing or resizing the window
- `stonesense`: fixed crash when turning the onscreen display (OSD) layer off

## Misc Improvements
- `stonesense`: changed announcements to be right-aligned and limited to only show the most recent 10 announcements
- `stonesense`: ``init.txt`` config file is now read from ``dfhack-config/stonesense/init.txt``