@@ -40,6 +40,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `stonesense`: screen dimensions are now properly set when overriden by a window manager
 
 ## Misc Improvements
 
